--- a/StreamingMovie.Web/Views/Movie/Details.cshtml
+++ b/StreamingMovie.Web/Views/Movie/Details.cshtml
@@ -130,26 +130,16 @@
                         <div class="section-title">
                             <h5>you might like...</h5>
                         </div>
-                        <div class="product__sidebar__view__item set-bg" data-setbg="@Url.Content("~/img/sidebar/tv-1.jpg")">
-                            <div class="ep">18 / ?</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                            <h5><a href="#">Boruto: Naruto next generations</a></h5>
+                        @foreach (var item in Model.Movies)
+                        {
+                            
+                        <div class="product__sidebar__view__item set-bg" data-setbg="@Url.Content(item.BannerUrl)">
+                            <div class="ep">@item.ImdbRating</div>
+                            <div class="view"><i class="fa fa-eye"></i> @item.ViewCount</div>
+                            <h5><a asp-action="Details" asp-controller="Movie" asp-route-slug="@item.Slug">@item.Title</a></h5>
                         </div>
-                        <div class="product__sidebar__view__item set-bg" data-setbg="@Url.Content("~/img/sidebar/tv-2.jpg")">
-                            <div class="ep">18 / ?</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                            <h5><a href="#">The Seven Deadly Sins: Wrath of the Gods</a></h5>
-                        </div>
-                        <div class="product__sidebar__view__item set-bg" data-setbg="@Url.Content("~/img/sidebar/tv-3.jpg")">
-                            <div class="ep">18 / ?</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                            <h5><a href="#">Sword art online alicization war of underworld</a></h5>
-                        </div>
-                        <div class="product__sidebar__view__item set-bg" data-setbg="@Url.Content("~/img/sidebar/tv-4.jpg")">
-                            <div class="ep">18 / ?</div>
-                            <div class="view"><i class="fa fa-eye"></i> 9141</div>
-                            <h5><a href="#">Fate/stay night: Heaven's Feel I. presage flower</a></h5>
-                        </div>
+                        }
+
                     </div>
                 </div>
             </div>
